--- a/home.html
+++ b/home.html
@@ -114,7 +114,7 @@
         <a href="https://richardlau.ca/artofvisualdata-typeface"><span class="visually-hidden">View project: Art of Visual Data Typeface</span>  
           <div class="thumbnailParent">
             <video aria-label="Type Specimen booklet about the typeface called Art of Visual Data." class="Thumbnail" autoplay muted loop playsinline>
-              <source src="media/type-specimen-booklet-web-cover.webm" type="video/mp4">
+              <source src="https://dl.dropboxusercontent.com/scl/fi/a2xc6xytv8qb0wk9qc2m0/type-specimen-booklet-web-cover.webm?rlkey=bs9k7vk58igg5yt6q40y1nc27" type="video/webm">
             </video>          
           </div>
         </a>
