--- a/artofvisualdata/index.html
+++ b/artofvisualdata/index.html
@@ -680,7 +680,7 @@
       <h2>Related Projects</h2>
     </header>
     <figure class="relatedProjectContainer fadeinup">
-      <a href="#">
+      <a href="https://richardlau.ca/artofvisualdata-typeface/">
         <img src="../media/type_specimen_mockup_concrete.png" alt="Art of Visual Data Typeface Booklet.">
       </a>
     </figure>
@@ -691,7 +691,7 @@
         <li>Print Design</li>
         <li>System Building</li>
       </ul>
-      <h3><a href="#" class="seeProject">see project</a></h3>
+      <h3><a href="https://richardlau.ca/artofvisualdata-typeface/" class="seeProject">see project</a></h3>
     </div>
   </section>
 
