--- a/artofvisualdata-typeface/index.html
+++ b/artofvisualdata-typeface/index.html
@@ -287,7 +287,10 @@
       </figure>
 
       <video autoplay muted loop playsinline class="full-width fadeinup">
+        <source src="https://dl.dropboxusercontent.com/scl/fi/8dvgiltr223eah2p66zoy/transparent-aovd-full-refined.webm?rlkey=gag2m5n4n3zh83bjxaujx5pde" type="video/webm">
         <source src="casestudy/video/transparent-aovd-full-refined.webm" type="video/webm">
+        <source src="https://dl.dropboxusercontent.com/scl/fi/ezzzto7sf6602y6jx8eay/transparent-aovd-full-refined.mp4?rlkey=ul0386iu3frdc27dmd0pjga8r" type="video/mp4">
+        <source src="casestudy/video/transparent-aovd-full-refined.mp4" type="video/mp4">
       </video> 
       
       <div class="sectionDivider fadeinup regular-gap"></div>
@@ -525,6 +528,9 @@
       <div class="systems-content">
         <figure class="packaging-center fadeinup">
           <video autoplay muted loop playsinline class="full-width border-smooth">
+            <source src="https://dl.dropboxusercontent.com/scl/fi/byg7v94k32363rbu3h4ih/typeface-kerning.webm?rlkey=w5gve8qatu2mpjbcgpyjfpok4" type="video/webm">
+            <source src="casestudy/video/typeface-kerning.webm" type="video/webm">
+            <source src="https://dl.dropboxusercontent.com/scl/fi/96y04zoupbvhdya6bvmgf/typeface-kerning.mp4?rlkey=b9akfq077wxcfeqtmaheik4qy" type="video/mp4">
             <source src="casestudy/video/typeface-kerning.mp4" type="video/mp4">
           </video>
           <figcaption class="halyardLight smallType gray">517 kerning pairs for AoVD Refined</figcaption>
@@ -581,6 +587,9 @@
 
       <figure class="light-gap fadeinup">
           <video autoplay muted loop playsinline class="full-width border-smooth">
+            <source src="https://dl.dropboxusercontent.com/scl/fi/n1xi9qo44idcoh5lwcgtv/aovd_with_audio.webm?rlkey=vgny2z0dvcfup5dy7qbwftt00" type="video/webm">
+            <source src="casestudy/video/aovd_with_audio.webm" type="video/webm">
+            <source src="https://dl.dropboxusercontent.com/scl/fi/i0vd4ca5f300mnckmrw07/aovd_with_audio.mp4?rlkey=62ansuzq5hb2mqgkr9dlcn916" type="video/mp4">
             <source src="casestudy/video/aovd_with_audio.mp4" type="video/mp4">
           </video>        
       </figure>
@@ -713,7 +722,10 @@
       and a few brand applications that communicates the essence of the Art of Visual Data.      
     </p>  
       <video autoplay muted loop playsinline class="full-width fadeinup border-smooth small-gap" aria-label="Preview of the type specimen booklet design.">
+        <source src="https://dl.dropboxusercontent.com/scl/fi/n86b5kqe25xh1nwkops0n/type-specimen-booklet-images.webm?rlkey=f0920k194zes4eetpt7b5z29a" type="video/webm">
         <source src="casestudy/video/type-specimen-booklet-images.webm" type="video/webm">
+        <source src="https://dl.dropboxusercontent.com/scl/fi/eq5rlvk1ibv3cm9s4cbh2/type-specimen-booklet-images.mp4?rlkey=22u387v93ylbzb4xg4w7gy160" type="video/mp4">
+        <source src="casestudy/video/type-specimen-booklet-images.mp4" type="video/mp4">
       </video>
 
     <p class="halyardLight regularType fadeinup gray small-gap">
