--- a/home.html
+++ b/home.html
@@ -97,7 +97,8 @@
       <article class="project1 fadeinup">
         <a href="https://richardlau.ca/artofvisualdata"> <span class="visually-hidden">View project: Art of Visual Data Website</span>  
           <div class="thumbnailParent">
-            <video aria-label="Art of Visual Data displaying multiple website screens, highlighting data visualization." class="Thumbnail" autoplay muted loop playsinline>
+            <video aria-label="Art of Visual Data displaying multiple website screens, highlighting data visualization." 
+            class="Thumbnail" autoplay muted loop playsinline poster="artofvisualdata/caseStudy1/aovdWebsiteMockup.png">
               <source src="https://dl.dropboxusercontent.com/scl/fi/3xfbn9zcbm08zcmpq7zw5/aovdWebMotionVideo.mp4?rlkey=qh4srzpvmx9lint0lv9gofwyp&st=tbvlfxyw" type="video/mp4">
             </video>
           </div>
@@ -113,7 +114,8 @@
       <article class="project2 fadeinup">
         <a href="https://richardlau.ca/artofvisualdata-typeface"><span class="visually-hidden">View project: Art of Visual Data Typeface</span>  
           <div class="thumbnailParent">
-            <video aria-label="Type Specimen booklet about the typeface called Art of Visual Data." class="Thumbnail" autoplay muted loop playsinline>
+            <video aria-label="Type Specimen booklet about the typeface called Art of Visual Data." 
+            class="Thumbnail" autoplay muted loop playsinline poster="artofvisualdata-typeface/casestudy/final-print-mockup.png">
               <source src="https://dl.dropboxusercontent.com/scl/fi/a2xc6xytv8qb0wk9qc2m0/type-specimen-booklet-web-cover.webm?rlkey=bs9k7vk58igg5yt6q40y1nc27" type="video/webm">
             </video>          
           </div>
