we going up up up its our moment

--- a/home.html
+++ b/home.html
@@ -117,6 +117,9 @@
             <video aria-label="Type Specimen booklet about the typeface called Art of Visual Data." 
             class="Thumbnail" autoplay muted loop playsinline poster="artofvisualdata-typeface/casestudy/final-print-mockup.png">
               <source src="https://dl.dropboxusercontent.com/scl/fi/a2xc6xytv8qb0wk9qc2m0/type-specimen-booklet-web-cover.webm?rlkey=bs9k7vk58igg5yt6q40y1nc27" type="video/webm">
+              <source src="media/type-specimen-booklet-web-cover.webm" type="video/webm">
+              <source src="https://dl.dropboxusercontent.com/scl/fi/26nazkgn96qiwsv4vknt0/type-specimen-booklet-web-cover.mp4?rlkey=1of3nd60uph0k095zcptlkimo" type="video/mp4">
+              <source src="media/type-specimen-booklet-web-cover.mp4" type="video/mp4">
             </video>          
           </div>
         </a>
