--- a/artofvisualdata/index.html
+++ b/artofvisualdata/index.html
@@ -479,7 +479,8 @@
     <!-- desktop version -->
     <section class="finalDesignImages desktopFinals">
       <video aria-label="Desktop Mockup of Art of Visual Data's homepage." class="mockupImage fadeinup" autoplay muted loop playsinline>
-        <source src="https://dl.dropboxusercontent.com/scl/fi/y1w3c3i9j4l52jrnzc6mh/homePageMockup.mp4?rlkey=gybzsfu61upzaqydcbquip8b6&st=ho6cv7bz" type="video/mp4">
+        <source src="https://dl.dropboxusercontent.com/scl/fi/y1w3c3i9j4l52jrnzc6mh/homePageMockup.mp4?rlkey=gybzsfu61upzaqydcbquip8b6" type="video/mp4">
+        <source src="caseStudy1/homePageMockup.mp4" type="video/mp4">
       </video>
       
       <article class="videoCaptionCombination1 fadeinup">
@@ -578,7 +579,7 @@
 
     <figure id="motionGraphic" class="fadeinup">
       <video aria-label="Motion graphic of Art of Visual Data's branding, purpose, and mockups." class="mockupImage" loop controls muted playsinline>
-        <source src="https://dl.dropboxusercontent.com/scl/fi/3oevj4f6st0b3ephwls05/aovdMotionPresentationTrimmed.mp4?rlkey=6la2199f7nhiudzr63714yvy2&st=hgtj8cna" type="video/mp4">
+        <source src="https://dl.dropboxusercontent.com/scl/fi/sbpz47myvsmuqylyqe2yp/aovdMotionPresentationTrimmed.mp4?rlkey=suqu0j6uylprxdxu52z5jkxt9" type="video/mp4">
       </video>
     </figure>
 
@@ -654,7 +655,8 @@
         <p class="paragraphStyle2">— Eric, 3D Artist</p>
       </blockquote>
       <video aria-label="Desktop Mockup of Art of Visual Data's article landing page." class="quoteVideo" autoplay muted loop playsinline>
-        <source src="https://dl.dropboxusercontent.com/scl/fi/10mgjgh2bz2jldbi92nv5/articleHomeLanding.mp4?rlkey=qkw5mdwezibsnimezezf6rlaz&st=sf4w4nnp" type="video/mp4">
+        <source src="https://dl.dropboxusercontent.com/scl/fi/10mgjgh2bz2jldbi92nv5/articleHomeLanding.mp4?rlkey=qkw5mdwezibsnimezezf6rlaz" type="video/mp4">
+        <source src="caseStudy1/articleHomeLanding.mp4" type="video/mp4">
       </video>
     </div>
 
