--- a/queensgambit/index.html
+++ b/queensgambit/index.html
@@ -29,7 +29,7 @@
             <ul>
             <li><a href="https://richardlau.ca/home">home</a></li>
             <li><a href="#">about</a></li>
-            <li><a href="#">tidbits</a></li>
+            <li><a href="#">sparks</a></li>
             <li><a href="#">resume</a></li>
             </ul>
         </nav>
@@ -51,7 +51,7 @@
  <footer class="footerContent">
   <div class="divider"></div>
   <div class="siteInfo">
-    <p>© 2025 Richard Lau. All rights reserved.</p>
+    <p>© 2026 Richard Lau. All rights reserved.</p>
     <p>imagined and crafted by richard | ft. healthy sleep schedule</p>
   </div>
 </footer>
