--- a/queensgambit/index.html
+++ b/queensgambit/index.html
@@ -28,9 +28,9 @@
         <nav class="nav-links">
             <ul>
             <li><a href="https://richardlau.ca/home">home</a></li>
-            <li><a href="#">about</a></li>
-            <li><a href="#">sparks</a></li>
-            <li><a href="#">resume</a></li>
+            <li><a href="https://richardlau.ca/about">about</a></li>
+            <li><a href="#">fishbones</a></li>
+            <li><a href="https://drive.google.com/file/d/1HeYr4Dw9TadbNes3u8uDA5jCR6kDGA6j/view?usp=sharing" target="_blank">resume</a></li>
             </ul>
         </nav>
         </header>
