file/source optimization

--- a/home.html
+++ b/home.html
@@ -98,6 +98,8 @@
           <div class="thumbnailParent">
             <video aria-label="Art of Visual Data displaying multiple website screens, highlighting data visualization." 
             class="Thumbnail" autoplay muted loop playsinline poster="artofvisualdata/caseStudy1/aovdWebsiteMockup.png">
+              <source src="https://richard-lau.b-cdn.net/aovd/aovd-motion-loop.webm" type="video/webm">
+              <source src="https://richard-lau.b-cdn.net/aovd/aovdWebMotionVideo.mp4" type="video/mp4">              
               <source src="https://dl.dropboxusercontent.com/scl/fi/3xfbn9zcbm08zcmpq7zw5/aovdWebMotionVideo.mp4?rlkey=qh4srzpvmx9lint0lv9gofwyp&st=tbvlfxyw" type="video/mp4">
             </video>
           </div>
@@ -115,9 +117,13 @@
           <div class="thumbnailParent">
             <video aria-label="Type Specimen booklet about the typeface called Art of Visual Data." 
             class="Thumbnail" autoplay muted loop playsinline poster="artofvisualdata-typeface/casestudy/final-print-mockup.png">
+              <source src="https://richard-lau.b-cdn.net/aovd-type/type-specimen-booklet-web-cover.webm" type="video/webm">
+              <source src="https://richard-lau.b-cdn.net/aovd-type/type-specimen-booklet-web-cover.mp4" type="video/mp4">
+            
               <source src="https://dl.dropboxusercontent.com/scl/fi/a2xc6xytv8qb0wk9qc2m0/type-specimen-booklet-web-cover.webm?rlkey=bs9k7vk58igg5yt6q40y1nc27" type="video/webm">
-              <source src="media/type-specimen-booklet-web-cover.webm" type="video/webm">
               <source src="https://dl.dropboxusercontent.com/scl/fi/26nazkgn96qiwsv4vknt0/type-specimen-booklet-web-cover.mp4?rlkey=1of3nd60uph0k095zcptlkimo" type="video/mp4">
+
+              <source src="media/type-specimen-booklet-web-cover.webm" type="video/webm">
               <source src="media/type-specimen-booklet-web-cover.mp4" type="video/mp4">
             </video>          
           </div>
@@ -134,6 +140,8 @@
         <a href="https://richardlau.ca/queensgambit"><span class="visually-hidden">View project: Seoul International Architecture Film Festival</span>  
           <div class="thumbnailParent">
             <video aria-label="Featuring SIAFF website screens from mobile to desktop applications." class="Thumbnail2" autoplay muted loop playsinline>
+              <source src="https://richard-lau.b-cdn.net/siaff/promo-web-video-siaff.webm" type="video/webm">
+              <source src="https://richard-lau.b-cdn.net/siaff/promo-web-video-siaff.mp4" type="video/mp4">
               <source src="https://dl.dropboxusercontent.com/scl/fi/rrv7v4usj4hh6q8c1ps7w/promo-web-video-siaff.mp4?rlkey=nrngswf9hphx0yyvcjcwu8t15" type="video/mp4">
             </video>
           </div> 
@@ -164,6 +172,8 @@
         <a href="https://richardlau.ca/queensgambit"><span class="visually-hidden">View project: The Queen's Gambit</span>  
           <div class="thumbnailParent">
             <video aria-label="Featuring gamified and graphical scenes recreating the essence of the show." class="Thumbnail2" autoplay muted loop playsinline>
+              <source src="https://richard-lau.b-cdn.net/queens-gambit/queenMockup.webm" type="video/webm">
+              <source src="https://richard-lau.b-cdn.net/queens-gambit/queenMockup.mp4" type="video/mp4">              
               <source src="https://dl.dropboxusercontent.com/scl/fi/jfqz2oaxaph1u0idsuy2j/queenMockup.mp4?rlkey=dw375tplyzeia1mtt3bs322np&st=ib1o4t0l" type="video/mp4">
             </video>
           </div> 
